--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"npm": "6.7.0"
 	},
 	"scripts": {
-		"start": "node index.js"
+		"start": "node index.js",
+		"server": "nodemon index.js",
+		"client": "npm run start --prefix client"
 	},
 	"author": "Tung Le",
 	"license": "MIT",
