--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
     "react": "^16.8.6",
@@ -11,6 +12,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
